# lightning_vend

./: .eslintignore  .gitignore  .gitpod.yml  Dockerfile  deployment.yml  jest.config.node.js  liveace_bell.ino  liveace_mega_stepper.ino  liveace_mega_sticker_machine.ino  package-lock.json  package.json  pi_device_setup.sh  webpack.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  dev-ci.yml  prod-ci.yml  publish.yml  publish_test.yml
adafruit_motor_server/: Cargo.toml
adafruit_motor_server/src/: main.rs
api/: .gitignore  Cargo.toml  build.rs
api/src/: main.rs  service.rs
api/src/proto/: mod.rs
client/: index.html  jest.config.ts  package-lock.json  package.json  setupTests.ts
client/src/: adminPage.tsx  api.ts  app.tsx  deviceApi.ts  devicePage.tsx  index.tsx  invoice.tsx  landingPage.tsx  learnMorePage.tsx  lightningNetworkLogo.tsx  protoHelper.ts  protoHelper.unit.test.tsx  selectionMenu.tsx  selectionMenu.unit.test.tsx  styledQRCode.tsx
client/src/__snapshots__/: selectionMenu.unit.test.tsx.snap
client/src/adminPage/: countdownTimer.tsx  deviceSettingsPanel.tsx  loginBox.tsx
client/src/adminPage/deviceSettingsPanel/: editableDeviceDisplayName.tsx  index.tsx  inventoryItemCard.tsx
client/src/api/: adminApi.ts  deviceActionExecutorApi.ts  deviceApi.ts  deviceLocalStorage.ts  deviceLocalStorage.unit.test.ts  sharedApi.ts
client/testing/: screenshot.test.ts
command_executor_server/: Cargo.toml  build_for_pi.sh
command_executor_server/src/: main.rs
command_executor_server/src/command_executor/: adafruit_motorkit.rs  liveace.rs  mod.rs
frontend/: Dockerfile  build_ts_proto.sh  index.d.ts  jest.config.jsdom.js  nodemon.json  package-lock.json  package.json  tsconfig.json  webpack.config.ts
frontend/client/src/: adminPage.tsx  devicePage.tsx  index.html  index.tsx  landingPage.tsx  learnMorePage.tsx  notFoundPage.tsx  selectionMenu.unit.test.tsx  themes.ts
frontend/client/src/adminPage/: authenticatedAdminPage.tsx  countdownReactHook.tsx  countdownTimer.tsx  index.tsx  loginBox.tsx
frontend/client/src/adminPage/deviceSettingsPanel/: index.tsx  inventoryItemDialog.tsx
frontend/client/src/adminPage/loginBox/: index.tsx  textFieldWithButton.tsx
frontend/client/src/api/: adminApi.ts  deviceApi.ts  deviceLocalStorage.unit.test.ts  sharedApi.ts
frontend/server/: coordinator.ts  ebnf.ts  ebnf.txt  ebnf.unit.test.ts  index.ts  lnAuth.ts  lndApi.ts
frontend/server/clientApi/: deviceSocketManager.ts
frontend/server/persistence/: deviceCollection.ts  deviceCollection.unit.test.ts  deviceUnackedSettledInvoiceManager.unit.test.ts  invoiceManager.ts  lndInvoiceSubscriptionCollection.ts  lndInvoiceSubscriptionCollection.unit.test.ts  mongoSingletonCollection.ts  mongoSingletonCollection.unit.test.ts  userCollection.ts  userCollection.unit.test.ts  userSessionManager.ts
frontend/shared/: adminSocketTypes.ts  commandExecutor.ts  lnAuth.test.ts  lnAuthBrowserSafe.ts  lnAuthNodeOnly.ts  proto.ts
liveace_server/: Cargo.toml
liveace_server/src/: command_executor.rs  liveace.rs  main.rs
motor_server/src/: vend_coil.rs
proto/: build.sh  install_linux.sh
proto/google/api/: resource.proto
proto/lightning_vend/: device_service.proto  model.proto  service.proto  user_service.proto  wallet_service.proto
proto/lnrpc/: lightning.proto
rust-test/: .gitignore  package.json
rust-test/lib/: index.js  index.ts
rust-test/native/: Cargo.toml  artifacts.json  build.rs
rust-test/native/src/: lib.rs
rust-test/native/src/proto/: mod.rs
server/: Cargo.toml  adminSessionManager.ts  adminSessionManager.unit.test.ts  adminSocketManager.ts  coordinator.ts  deviceSessionManager.ts  deviceSessionManager.unit.test.ts  deviceSetupCodeManager.ts  deviceSetupCodeManager.unit.test.ts  deviceSocketManager.ts  index.ts  invoiceManager.ts  lightning.proto  lightningNodeSearcher.ts  lnAuth.ts  lndApi.ts  lnd_api.ts  socketManager.ts
server/clientApi/: adminSocketManager.ts  deviceSocketManager.ts
server/persistence/: adminSessionManager.ts  adminSessionManager.unit.test.ts  aipHelper.ts  aipHelper.unit.test.ts  deviceCollection.ts  deviceCollection.unit.test.ts  deviceSessionManager.ts  deviceSessionManager.unit.test.ts  deviceSetupCodeManager.ts  deviceSetupCodeManager.unit.test.ts  deviceUnackedSettledInvoiceManager.ts  invoiceManager.ts  userCollection.unit.test.ts
server/src/: main.rs
shared/: adminSocketTypes.ts  commandExecutor.ts  constants.ts  cookie.ts  deviceSocketTypes.ts  lnAuth.test.ts  lnAuthBrowserSafe.ts  lnAuthNodeOnly.ts  proto.ts  proto.unit.test.ts  uuid.ts
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  vend_coil.rs
