[package]
name = "lightning-vend"
version = "0.0.0"
description = "Vending maching head unit powered by the Bitcoin Lightning Network"
authors = ["Tommy Volk"]
edition = "2021"
rust-version = "1.57"

[dependencies]
adafruit_motorkit = "0.1.1"
futures = "0.3.25"
linux-embedded-hal = "0.3.2"
pwm-pca9685 = "0.2.0"
rocket = "0.5.0-rc.1"
serde_json = "1.0.91"
tokio = { version = "1.22.0", features = ["rt-multi-thread"] }
tonic_lnd = "0.5.0"
