[package]
name = "api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
serde = "1.0.152"
tonic-build = "0.8.4"

[dependencies]
futures = "0.3.26"
mongodb = "2.3.1"
prost = "0.11.6"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["fs"] }
tokio-stream = "0.1.11"
tonic = { version = "0.8.3", features = ["tls"] }
tonic-web = "0.4.0"
tower-http = "0.3.5"
tower-layer = "0.3.2"
