[package]
name = "command_executor_server"
version = "0.1.0"
edition = "2021"

[dependencies]
adafruit_motorkit = { version = "0.1.1", optional = true }
linux-embedded-hal = { version = "0.3.2", optional = true }
pwm-pca9685 = { version = "0.2.0", optional = true }
rocket = "0.5.0-rc.1"
serde = { version = "1.0.152", optional = true, features = ["derive"] }
serde_json = "1.0.91"
serialport = { version = "4.2.0", optional = true }

[features]
adafruit_motorkit = ["dep:adafruit_motorkit", "dep:pwm-pca9685", "dep:linux-embedded-hal"]
liveace = ["dep:serde", "dep:serialport"]
