[package]
name = "command_executor_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serialport = { version = "4.2.2", default-features = false }
