[package]
name = "lightning-vend"
version = "0.0.0"
description = "Vending maching head unit powered by the Bitcoin Lightning Network"
authors = ["Tommy Volk"]
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
futures = "0.3.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tonic_lnd = "0.5.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
