[package]
name = "lightning-vend"
version = "0.0.0"
description = "Vending maching head unit powered by the Bitcoin Lightning Network"
authors = ["Tommy Volk"]
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
adafruit_motorkit = { version = "0.1.1", optional = true }
futures = "0.3.25"
pwm-pca9685 = { version = "0.2.0", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread"] }
tonic_lnd = "0.5.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
stepper-motor = [ "dep:adafruit_motorkit", "dep:pwm-pca9685" ]
