[package]
name = "rust-test"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_test"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"
tonic-build = "0.8.4"

[dependencies]
lazy_static = "1.4.0"
mongodb = "2.3.1"
neon = "0.10.1"
prost = "0.11.6"
serde_json = "1.0.93"
tonic = "0.8.3"
