[package]
name = "rust-test"
version = "0.1.0"
authors = ["Tommy Volk <tvolk131@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "rust_test"
crate-type = ["cdylib", "lib"]

[build-dependencies]
neon-build = "0.10.1"
serde = "1.0.152"
tonic-build = "0.8.4"

[dependencies]
async-mutex = "1.4.0"
hex = "0.4.3"
mongodb = "2.3.1"
neon = { version = "0.10.1", default-features = false, features = ["napi-experimental", "promise-api", "task-api", "event-queue-api"] }
once_cell = "1.17.0"
prost = "0.11.6"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["fs"] }
tonic = { version = "0.8.3", features = ["tls"] }
